--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@vueup/vue-quill": "^1.2.0",
         "axios": "^1.7.2",
         "pinia": "^2.1.7",
         "vue": "^3.4.29",
