--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@vueup/vue-quill": "^1.2.0",
         "axios": "^1.7.2",
         "pinia": "^2.1.7",
+        "quill-blot-formatter": "^1.0.5",
         "vue": "^3.4.29",
         "vue-material-design-icons": "^5.3.0",
         "vue-router": "^4.3.3"
