--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@vueup/vue-quill": "^1.2.0",
         "axios": "^1.7.2",
+        "crypto": "^1.0.1",
         "pinia": "^2.1.7",
         "quill-blot-formatter": "^1.0.5",
         "vue": "^3.4.29",
@@ -24,7 +25,7 @@
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.8.0",
         "@tsconfig/node20": "^20.1.4",
-        "@types/node": "^20.14.5",
+        "@types/node": "^20.14.11",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vitejs/plugin-vue-jsx": "^4.0.0",
         "@vue/eslint-config-prettier": "^9.0.0",
